
Directory modules/bluespec/common/fpgaenv/physical-platform/htg_virtex5/pcie-enabled
 xilinx.download           Locally Removed           603 
 htg-v5-pcie-enabled-synplify.awb Locally Modified          603 
 htg-v5-pcie-enabled.awb   Locally Modified          603 

All bitfile download scripts were the same!  Generate the script in the build
rules instead of replicating this file.

----------
mcadler     Date: Sat Jun 30 08:19:38 EDT 2012  CSN: CSN-leap-platforms-605
                  Sat Jun 30 12:19:38 UTC 2012


Directory tools/platforms/leap-fpga-ctrl
 leap-fpga-ctrl.c          Locally Modified          604 

Directory tools/platforms/leap-fpga-ctrl/scripts
 HTG-V5-PCIe               Locally Modified          604 

Directory tools/platforms/leap-fpga-ctrl/etc
 config-sample             Locally Modified          604 

- Add a bus_id to the configuration database
- Pass device id to configuration scripts
- Update HTG sample script to use the device id to query the database and find
  the PCIe bus id.

----------
mcadler     Date: Sat Jun 30 09:48:26 EDT 2012  CSN: CSN-leap-platforms-606
                  Sat Jun 30 13:48:26 UTC 2012


Directory tools/platforms/leap-fpga-ctrl/scripts
 HTG-V5-PCIe               Locally Modified          605 

Clean up.

----------
kfleming    Date: Mon Jul 16 22:39:43 EDT 2012  CSN: CSN-leap-platforms-607
                  Tue Jul 17 02:39:43 UTC 2012


Directory modules/bluespec/common/fpgaenv/fpga-components
 hardware-fpga-components-virtex6-generic.awb Locally Modified          606 
 user-clock-pll-common.bsv Locally Modified          606 
 user-clock-xilinx-virtex6.v Locally Modified          606 
 user-clock-pll-virtex6.bsv Locally Modified          606 


We can now generate generic clocks for the Virtex6 parts.

More proof that Xilinx hates its customers: rather than converting
Integer parameters to Reals, Xilinx randomly chokes with odd error
messages about out of range VCO values.  